CHANGELOG
=========
3.3-dev (2017-04-23)
------------------

 * [FEATURE] #4415 Added separate grading-due-date to remind graders
 * [CHANGED] #4415 Replaced checkmark_print_overview() output with action events


3.2.1 (2017-03-02)
------------------

* [FIXED] #4277 Fixed title and header not being set correctly on submissions and export pages
* [FIXED] #4310 Fixed autograding displaying warnings when attendance is in gradebook and coupled
  as well as ignoring in gradebook overwritten attendances!
* [FIXED] Success message after auto-grading uses correct singular now, if only 1 entry was affected
* [FIXED] Fixed behat tests after they were not working properly since the 3.2 update (or since boost was introduced)
* [FIXED] #4325 Fixed presentation grade points form field wrongly set to $CFG->gradepointdefault on every edit


3.2.0 (2016-12-05)
------------------

* Moodle 3.2 compatible version


3.1.3 (2016-12-05)
------------------

* [FEATURE] Added presentation grade as additional grade item
* [FEATURE] #3710 Made description and name searchable
* [FEATURE] #3737 We now use regular text editor for submission feedbacks
* [FEATURE] #3610 We now use gradebook values for presentation grade and attendance if overwritten
* [FIXED] #3989 Fix overwritten presentationgrades not showing correctly in grading form
* [FIXED] #3986 Fix overwritten grades in general feedback not shown correctly
* [FIXED] #3949 Fix user count in messages related to automatic grading
* [CHANGED] #3985 Add notifications if attendances are locked/overriden while trying to set them via bulk actions
* [CHANGED] #3941 Show feedback for instances without grades
* [CHANGED] #3936 Hide grade columns if there is no grade to show and only feedback comments are active
* [CHANGED] #4011 Replace custom CSS classes for late/early/soon/etc. styling with bootstrap classes
* and various smaller bugfixes, fixed warning messages, etc.


3.1.2 (2016-10-03)
------------------
